2007-12-03  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Camera.cs: Added logic for detecting the correct music, photo and
	  playlist folders. Exposed these as properties

2007-12-03  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Files/PlaylistFile.cs: Made public constructor

2007-11-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/libgphoto2-sharp.dll.config: Adjusted to use the newer version of
	  libgphoto2_port
	* src/Base/PortInfo.cs: Adjusted to the new API
	* src/Base/CameraList.cs: Cosmetic

2007-11-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/FileSystem.cs, src/Base/CameraFilesystem.cs: That should be ulong, not
	  'long'

2007-11-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/libgphoto2-sharp.dll.config: make the -sharp binding require
	  libgphoto2.so.6

2007-11-14  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs, src/FileSystem.cs, src/Base/CameraFilesystem.cs: Conforming
	  with the new libgphoto2 API

2007-10-30  Alan McGovern <alan.mcgovern@gmail.com> 

	

2007-10-26  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs, src/Files/GenericFile.cs, src/Files/MusicFile.cs,
	  src/Files/ImageFile.cs: Added support code to allow the loading of Files
	  from streams. This needs to be thought out better though. Disabled for
	  the moment.

2007-10-22  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs: Killed the Download() overload that returned a byte[].
	  Replaced it by an overload which returns a Stream, this way large files
	  can be handled without having to store it entirely in memory

2007-10-22  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/File.cs, src/Files/GenericFile.cs, src/Files/MusicFile.cs,
	  src/Files/PlaylistFile.cs, src/Files/ImageFile.cs: More XML comments

2007-10-22  Alan McGovern <alan.mcgovern@gmail.com> 

	* src/Utilities.cs, src/GphotoException.cs, src/File.cs, src/FileSystem.cs,
	  src/ErrorCode.cs, src/Camera.cs, src/Abilities.cs: Added XML